[package]
name = "encrypted-browser-tunnel"
version = "0.1.0"
edition = "2021"
description = "Educational encrypted browser tunnel implementation"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
rustls = "0.21"
rustls-native-certs = "0.6"
tokio-rustls = "0.24"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
lazy_static = "1.4"

[features]
default = ["tokio"]
async = ["tokio"]
async_tunnel = ["tokio"]
doh_fallback = []
single_hop_relay = []
multi_hop_relay = []
encrypted_control = []